<resources>
    <string name="app_name">Komorebi</string>
    <string name="user">Usuaria</string>
    <string name="password">Contraseña</string>
    <string name="login">ENTRAR</string>
    <string name="menu_news">Noticias</string>
    <string name="menu_workshop">Talleres</string>
    <string name="menu_forum">Foro</string>
    <string name="profile_username">Usuaria</string>
    <string name="top_app_bar">Komorebi</string>
    <string name="menu_chats">Chats</string>
    <string name="profile_alias">Alias</string>
    <string name="menu_info">Darse cuenta</string>
    <string name="menu_profile">Perfil</string>
    <string name="subtitle">Personal</string>
    <string name="news_article_image">Imagen de la noticia</string>
    <string name="news_article_title">Titulo</string>
    <string name="news_article_article">Texto de la noticia</string>
    <string name="news_article_share">Compartir</string>
    <string name="news_article_view">Visualizar</string>
    <string name="header_forum">FORO</string>
    <string name="header_news">ULTIMAS NOTICIAS</string>
    <string name="header_information">DATE CUENTA</string>
    <string name="header_workshop">TALLERES</string>
    <string name="news_article_date">Fecha</string>
    <string name="share_to_intent">Compartir mediante...</string>
    <string name="access_as">Acceder como...</string>
    <string name="header_chats">CHATS</string>
    <string name="menu_edit_emergency_contact">Editar contacto de emergencia</string>
    <string name="menu_edit_alias">Editar alias</string>
    <string name="menu_edit_profile_picture">Cambiar foto de perfil</string>
</resources>